Testing Reports, not done

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-AWS_ACCESS_KEY_ID = "asdasdasdasda"
-AWS_SECRET_ACCESS_KEY = "awfwafawdfwadfawdfawdfawdfawdawdfawd"
-SELLER_ID = "asdasdasdasda"
-MARKETPLACE_ID = "asdasdasdasda"
-APPLICATION_NAME = "MyAppExampleName"
-APPLICATION_VERSION = "1.8"
+AWS_ACCESS_KEY_ID="ASDFASDFAWDFAFD"
+AWS_SECRET_ACCESS_KEY="asdAWFAFAWFAWF2412rfWEFW#t3Tr"
+APPLICATION_NAME="MyMwsAdapterAppThing"
+APPLICATION_VERSION="0.1.0"
+AMAZON_MERCHANT_ID = "Afwafdwawda";
+AMAZON_MARKETPLACE_ID = "asdasdasdadf";
+MWS_SERVICE_URL = "https://mws.amazonservices.com";
