--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
   ],
   "autoload": {
     "psr-4": {
-      "Amazon\\MWS\\": "src/"
+      "": "src/"
     }
   },
   "require": {
-    "vlucas/phpdotenv": "1.0.6"
   },
   "require-dev": {
-    "phpunit/phpunit": "3.7.38"
+    "phpunit/phpunit" : "3.7.x-dev",
+    "vlucas/phpdotenv": "2.0.x-dev"
   }
 }
